[gd_scene load_steps=12 format=3 uid="uid://cua80e6cbtcbg"]

[ext_resource type="Script" uid="uid://b4jxxb3dyy5ki" path="res://scripts/PlayerScripts/Levels/main_lvl_5.gd" id="1_5pm2v"]
[ext_resource type="PackedScene" uid="uid://wosei8oo5blp" path="res://EnemyTest.tscn" id="2_67rsj"]
[ext_resource type="PackedScene" uid="uid://b44ebn5xhv34r" path="res://characterBodyP1.tscn" id="3_5pm2v"]
[ext_resource type="Texture2D" uid="uid://bfgjf0iyokkp4" path="res://Assets/Pixel Health Bar/Bar/no health bar.png" id="3_67rsj"]
[ext_resource type="Script" uid="uid://chnd25exe3l3t" path="res://scripts/PlayerScripts/Levels/parallax_background_lvl5.gd" id="4_4rceu"]
[ext_resource type="Texture2D" uid="uid://ctysprhh2qur0" path="res://Assets/Pixel Health Bar/Bar/health bar.png" id="4_5pm2v"]
[ext_resource type="PackedScene" uid="uid://ckmiuk6k2658l" path="res://characterBodyP2.tscn" id="4_jbsp5"]
[ext_resource type="Texture2D" uid="uid://bvccngnd3tt2b" path="res://2D Space Parallax Backgrounds/layers/black_bg.png" id="6_6qmfb"]
[ext_resource type="Texture2D" uid="uid://b71b1etq41ye2" path="res://2D Space Parallax Backgrounds/layers/nebula.png" id="7_84b1l"]
[ext_resource type="Texture2D" uid="uid://60hvkelfx71c" path="res://2D Space Parallax Backgrounds/layers/small_stars.png" id="8_w3b7r"]
[ext_resource type="Texture2D" uid="uid://diwt20qjdcldu" path="res://2D Space Parallax Backgrounds/layers/big_stars.png" id="9_lx85q"]

[node name="MainLvl_5" type="Node2D"]
script = ExtResource("1_5pm2v")

[node name="CharacterBodyP1" parent="." instance=ExtResource("3_5pm2v")]
position = Vector2(195, 269)

[node name="CharacterBodyP2" parent="." instance=ExtResource("4_jbsp5")]
position = Vector2(142, 138)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1HealthBar" type="TextureProgressBar" parent="HUD/Control"]
layout_mode = 0
offset_left = 1.0
offset_right = 129.0
offset_bottom = 40.0
texture_under = ExtResource("3_67rsj")
texture_progress = ExtResource("4_5pm2v")

[node name="P1HealthBar2" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 91.0
offset_bottom = 38.0
text = "PLAYER 1"

[node name="P1PercentLabel" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 36.0
offset_top = 1.0
offset_right = 76.0
offset_bottom = 24.0
text = "100"

[node name="Control2" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="P2HealthBar" type="TextureProgressBar" parent="HUD/Control2"]
modulate = Color(0.4, 1, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture_under = ExtResource("3_67rsj")
texture_progress = ExtResource("4_5pm2v")

[node name="P2HealthBar2" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -38.0
offset_top = 20.0
offset_right = 34.0
offset_bottom = 43.0
text = "PLAYER 2"

[node name="P2PercentLabel" type="Label" parent="HUD/Control2"]
layout_mode = 0
offset_left = -40.0
offset_top = -1.0
offset_bottom = 22.0
text = "100"

[node name="EnemyTest" parent="." instance=ExtResource("2_67rsj")]
position = Vector2(548, 174)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("4_4rceu")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("6_6qmfb")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-2, -2)
texture = ExtResource("7_84b1l")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("8_w3b7r")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1.5, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("9_lx85q")
centered = false

[node name="DeathAnnouncement" type="Label" parent="." groups=["death_announcement"]]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Player 1 has died!
"
